fix profile widget overlay on tablet editor

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -291,6 +291,10 @@ blockquote {
 // Profile widgets in Footer
 // -----------------------------
 
+.template-footer .profile { // Fixes profile overlay in editor
+    min-height: 60px;
+}
+
 // Twitter
 
 .template-footer .twitter a {
